--- a/ShopAdminApp/ShopAdminApp/App.xaml
+++ b/ShopAdminApp/ShopAdminApp/App.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShopAdminApp.App">
     <Application.Resources>
+        <ResourceDictionary>
+        <Style TargetType="NavigationPage">
+            <Setter Property="BarBackgroundColor" Value="DeepSkyBlue"/>
+            <Setter Property="BarTextColor" Value="Black"   />
 
+        </Style>
+
+    </ResourceDictionary>
     </Application.Resources>
 </Application>
