--- a/ShopAdminApp/ShopAdminApp/Pages/LoginPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/LoginPage.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ShopAdminApp.LoginPage">
+             x:Class="ShopAdminApp.LoginPage"
+             BackgroundColor="DeepSkyBlue">
     <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
-        <Entry Placeholder="Email" x:Name="EmailEntry" />
+        <Entry Placeholder="Email" x:Name="EmailEntry" Keyboard="Email" />
         <Entry Placeholder="Password" IsPassword="True" x:Name="PasswordEntry" />
-        <Button Text="Login" Clicked="OnLoginButtonClicked" />
+        <Button Text="Login" Clicked="OnLoginButtonClicked" BackgroundColor="White" TextColor="DeepSkyBlue" Margin="0,10,0,0" />
         <Label Text="{Binding LoginMessage}" TextColor="Red" />
     </StackLayout>
 </ContentPage>
