--- a/ShopAdminApp/ShopAdminApp/Pages/HomePage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/HomePage.xaml
@@ -1,9 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ShopAdminApp.HomePage">
-    <ContentPage.Content>
-        <!-- Your home page content here -->
-        <Label Text="Welcome to the Home Page!" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" />
-    </ContentPage.Content>
-</ContentPage>
+             xmlns:local="clr-namespace:ShopAdminApp;assembly=ShopAdminApp"
+             x:Class="ShopAdminApp.HomePage"
+             Title="SHOP ADMIN"
+             NavigationPage.HasBackButton="false">
+    <FlyoutPage.Flyout>
+        <local:FlyoutMenuPage x:Name="flyoutPage" />
+    </FlyoutPage.Flyout>
+    <FlyoutPage.Detail>
+        <NavigationPage>
+            <x:Arguments>
+                <local:OrdersPage />
+            </x:Arguments>
+        </NavigationPage>
+    </FlyoutPage.Detail>
+   
+</FlyoutPage>
