Set background colro to grey

--- a/ShopAdminApp/ShopAdminApp/App.xaml
+++ b/ShopAdminApp/ShopAdminApp/App.xaml
@@ -4,12 +4,11 @@
              x:Class="ShopAdminApp.App">
     <Application.Resources>
         <ResourceDictionary>
-        <Style TargetType="NavigationPage">
-            <Setter Property="BarBackgroundColor" Value="DeepSkyBlue"/>
-            <Setter Property="BarTextColor" Value="Black"   />
-
-        </Style>
-
-    </ResourceDictionary>
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="DeepSkyBlue"/>
+                <Setter Property="BarTextColor" Value="Black"   />
+                <Setter Property="BackgroundColor" Value="#EFEFEF" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
