--- a/ShopAdminApp/ShopAdminApp/Pages/FlyoutMenuPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/FlyoutMenuPage.xaml
@@ -10,9 +10,11 @@
         <ListView x:Name="listView" x:FieldModifier="public">
             <ListView.ItemsSource>
                 <x:Array Type="{x:Type local:FlyoutPageItem}">
+                    <local:FlyoutPageItem Title="Dashboard" IconSource="dashboard.png" TargetType="{x:Type local:DashboardPage}" />
                     <local:FlyoutPageItem Title="Orders" IconSource="orders.png" TargetType="{x:Type local:OrdersPage}" />
-                    <local:FlyoutPageItem Title="Products" IconSource="products.png" TargetType="{x:Type local:OrdersPage}" />
-                    <local:FlyoutPageItem Title="Users" IconSource="users.png" TargetType="{x:Type local:OrdersPage}" />
+                    <local:FlyoutPageItem Title="Products" IconSource="products.png" TargetType="{x:Type local:ProductsPage}" />
+                    <local:FlyoutPageItem Title="Users" IconSource="users.png" TargetType="{x:Type local:UsersPage}" />
+                    <local:FlyoutPageItem Title="Settings" IconSource="settings.png" TargetType="{x:Type local:SettingsPage}" />
                 </x:Array>
             </ListView.ItemsSource>
             <ListView.ItemTemplate>
