--- a/ShopAdminApp/ShopAdminApp/MainPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/MainPage.xaml
@@ -2,8 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShopAdminApp.MainPage"
-             BackgroundColor="DeepSkyBlue">
+             NavigationPage.HasNavigationBar="false"
+             NavigationPage.HasBackButton="false"
+             BackgroundColor="#0098e1">
     <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
-        <Label Text="SHOP ADMIN" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" />
+        <Label Text="SHOP ADMIN"
+               TextColor="#FFF"
+               FontSize="Large"
+               FontAttributes="Bold"
+               HorizontalOptions="CenterAndExpand"
+               VerticalOptions="CenterAndExpand" />
+        <Image Source="splash_logo.png" />
     </StackLayout>
 </ContentPage>
