--- a/ShopAdminApp/ShopAdminApp/Pages/ProductsPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/ProductsPage.xaml
@@ -4,19 +4,22 @@
 			 xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
              xmlns:models="clr-namespace:ShopAdminApp.Models;assembly=ShopAdminApp"
 			 x:Class="ShopAdminApp.ProductsPage"
-			 Title="Product">
+			 Title="Products">
      <Grid>  
         <Grid>  
             <Grid.RowDefinitions>  
                 <RowDefinition Height="Auto"/>  
                 <RowDefinition Height="*"/>  
-            </Grid.RowDefinitions> 
-            <SearchBar Placeholder="Search" />
+            </Grid.RowDefinitions>
+            <Frame HeightRequest="20">
+                <SearchBar Placeholder="Search" />
+            </Frame>
+            
             <ListView
                 x:Name="listviewProducts"
                 Grid.Row="1"
                 HorizontalOptions="FillAndExpand"
-                HasUnevenRows="True">  
+                HasUnevenRows="True">
                 <ListView.ItemTemplate>  
                     <DataTemplate>  
                         <ViewCell>  
@@ -26,19 +29,33 @@
                                     <RowDefinition Height="Auto"/>  
                                     <RowDefinition Height="Auto"/>  
                                     <RowDefinition Height="Auto"/>  
-                                </Grid.RowDefinitions>  
-                                <Label Text="{Binding name}" HorizontalOptions="StartAndExpand" Grid.Row="0" TextColor="Black"  FontAttributes="Bold"/>  
-                                <Label Text="{Binding brand}" HorizontalOptions="StartAndExpand" Grid.Row="1" TextColor="Black"  FontAttributes="Bold"/>  
-                                <Label Text="{Binding price}" HorizontalOptions="StartAndExpand" Grid.Row="2" TextColor="Gray"  FontAttributes="Bold"/>  
-  
-                                <BoxView HeightRequest="2" Margin="0,10,10,0" BackgroundColor="Gray" Grid.Row="3" HorizontalOptions="FillAndExpand" />  
+                                </Grid.RowDefinitions>
+                                <Frame Margin="0,0,0,-10"
+                                       HasShadow="False">
+                                    <Image Source="{Binding image_urls}"
+                                       Aspect="AspectFill"
+                                       HeightRequest="250"
+                                       WidthRequest="100"
+                                       Grid.Row="0"/>
+                                </Frame>
+                                <BoxView HeightRequest="2" Margin="0,10,10,-15" BackgroundColor="Gray" Grid.Row="1" HorizontalOptions="FillAndExpand" />  
+                                <Frame Grid.Row="2" Margin="0,0,0,-10" HasShadow="False">
+                                    <Label Text="{Binding name}" HorizontalOptions="StartAndExpand" TextColor="Black"  FontAttributes="Bold"/>  
+                                </Frame>
+                                <Frame Grid.Row="3" Margin="0,0,0,20" HasShadow="False">
+                                    <Label Text="{Binding brand}" HorizontalOptions="StartAndExpand" TextColor="Gray"  FontAttributes="Bold"/>  
+                                </Frame>
                             </Grid>  
                         </ViewCell>  
-  
                     </DataTemplate>  
-                </ListView.ItemTemplate>  
+                </ListView.ItemTemplate>
+
             </ListView>  
         </Grid>  
-        <ActivityIndicator x:Name="ProgressLoader" IsRunning="True"/>
+        <ActivityIndicator x:Name="ProgressLoader" Color="#0098e1" IsRunning="True">
+          <ActivityIndicator.Scale>
+            <OnPlatform x:TypeArguments="x:Double" iOS="1.0" Android="0.2" />
+          </ActivityIndicator.Scale>
+        </ActivityIndicator> 
     </Grid>  
 </ContentPage>
