--- a/ShopAdminApp/ShopAdminApp/App.xaml
+++ b/ShopAdminApp/ShopAdminApp/App.xaml
@@ -5,9 +5,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="DeepSkyBlue"/>
-                <Setter Property="BarTextColor" Value="Black"   />
-                <Setter Property="BackgroundColor" Value="#EFEFEF" />
+                <Setter Property="BarBackgroundColor" Value="#0098e1"/>
+                <Setter Property="BarTextColor" Value="#FFF"   />
+                <Setter Property="BackgroundColor" Value="DarkGray" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
