--- a/ShopAdminApp/ShopAdminApp/App.xaml
+++ b/ShopAdminApp/ShopAdminApp/App.xaml
@@ -7,7 +7,7 @@
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="#0098e1"/>
                 <Setter Property="BarTextColor" Value="#FFF"   />
-                <Setter Property="BackgroundColor" Value="DarkGray" />
+                <Setter Property="BackgroundColor" Value="#EFEFEF" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
